CHATS_SIT/force-app/main/default/objects/sfsit_t_child_sup_hist__x.object
<CustomObject>
    <description>sfsit$t_child_sup_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_child_sup_hist</externalName>
    <fields>
        <fullName>cde_source_vrfd_coda__c</fullName>
        <description>cde_source_vrfd_coda</description>
        <externalDeveloperName>cde_source_vrfd_coda</externalDeveloperName>
        <label>CODA Verified Source Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_begin_cs_coop__c</fullName>
        <description>dte_begin_cs_coop</description>
        <externalDeveloperName>dte_begin_cs_coop</externalDeveloperName>
        <label>Child Support COOP Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_begin_gdc__c</fullName>
        <description>dte_begin_gdc</description>
        <externalDeveloperName>dte_begin_gdc</externalDeveloperName>
        <label>Good Cause Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_birth_cust_non__c</fullName>
        <description>dte_birth_cust_non</description>
        <externalDeveloperName>dte_birth_cust_non</externalDeveloperName>
        <label>Brith Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_change_rptd__c</fullName>
        <description>dte_change_rptd</description>
        <externalDeveloperName>dte_change_rptd</externalDeveloperName>
        <label>Reported Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_end_cs_coop__c</fullName>
        <description>dte_end_cs_coop</description>
        <externalDeveloperName>dte_end_cs_coop</externalDeveloperName>
        <label>Child Support COOP End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_end_gdc__c</fullName>
        <description>dte_end_gdc</description>
        <externalDeveloperName>dte_end_gdc</externalDeveloperName>
        <label>Good Cause End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_child_sup__c</fullName>
        <description>idn_child_sup</description>
        <externalDeveloperName>idn_child_sup</externalDeveloperName>
        <label>Child Support ID</label>
        <length>50</length>
        <referenceTargetField>T_CHILD_SUP__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_CHILD_SUP__c</referenceTo>
        <relationshipLabel>Child Support Enforcement Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_child_sup_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_child_sup_hist__c</fullName>
        <description>idn_child_sup_hist</description>
        <externalDeveloperName>idn_child_sup_hist</externalDeveloperName>
        <label>Child Support ID History</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_client__c</fullName>
        <description>idn_client</description>
        <externalDeveloperName>idn_client</externalDeveloperName>
        <label>Client ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_state_cust_non__c</fullName>
        <description>idn_state_cust_non</description>
        <externalDeveloperName>idn_state_cust_non</externalDeveloperName>
        <label>State ID of Non-Custodial</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_child_sup_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_case_open__c</fullName>
        <description>ind_case_open</description>
        <externalDeveloperName>ind_case_open</externalDeveloperName>
        <label>Case Open</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_coop_parent__c</fullName>
        <description>ind_coop_parent</description>
        <externalDeveloperName>ind_coop_parent</externalDeveloperName>
        <label>COOP Parent ID</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_gdc__c</fullName>
        <description>ind_gdc</description>
        <externalDeveloperName>ind_gdc</externalDeveloperName>
        <label>Good Cause ID</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_rcv_sup_child__c</fullName>
        <description>ind_rcv_sup_child</description>
        <externalDeveloperName>ind_rcv_sup_child</externalDeveloperName>
        <label>Receievd Child Support</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical Deleted Record</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_visitn__c</fullName>
        <description>ind_visitn</description>
        <externalDeveloperName>ind_visitn</externalDeveloperName>
        <label>Visitation Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_vrfyd__c</fullName>
        <description>ind_vrfyd</description>
        <externalDeveloperName>ind_vrfyd</externalDeveloperName>
        <label>Verified Indicator</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nam_first_cust_non__c</fullName>
        <description>nam_first_cust_non</description>
        <externalDeveloperName>nam_first_cust_non</externalDeveloperName>
        <label>First Name of Non-Custodial Parent</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nam_last_cust_non__c</fullName>
        <description>nam_last_cust_non</description>
        <externalDeveloperName>nam_last_cust_non</externalDeveloperName>
        <label>Last Name of Non-Custodial Parent</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nam_mi_cust_non__c</fullName>
        <description>nam_mi_cust_non</description>
        <externalDeveloperName>nam_mi_cust_non</externalDeveloperName>
        <label>Middle Name of Non-Custodial Parent</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>History Number Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_ssn_cust_non__c</fullName>
        <description>nbr_ssn_cust_non</description>
        <externalDeveloperName>nbr_ssn_cust_non</externalDeveloperName>
        <label>SSN of Non-Custodial Parent</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <label>Child Support History</label>
    <pluralLabel>Child Support History</pluralLabel>
</CustomObject>